# lang1

./: .gitignore  LICENSE  README.md  TODO.md  schminke.cabal  shell.nix  stack.yaml  test.bats
app/: Main.hs
bats/: fac.sch  int.sch  test.bats
examples/: fac.sch  hello.sch  int.sch
sch/: Prelude.sch
src/: Env.hs  Infer.hs  Lexer.hs  Parser.hs  Pretty.hs  Syntax.hs  Type.hs
src/Language/: Schminke.hs
src/Language/Schminke/: Backend.hs  Codegen.hs  Core.hs  Emit.hs  Env.hs  Frontend.hs  Infer.hs  Lexer.hs  Parser.hs  Pretty.hs  Subst.hs  Syntax.hs  Type.hs
src/Language/Schminke/Backend/: ANF.hs  Convert.hs  Core.hs  DeBruijn.hs  Eval.hs  Lexer.hs  Normalize.hs  Parser.hs  Pretty.hs  Reduce.hs  Sub.hs
src/Language/Schminke/Frontend/: Env.hs  Infer.hs  Lexer.hs  Parser.hs  Pretty.hs  Syntax.hs  Type.hs
test/Language/Schminke/: InferSpec.hs  ParserSpec.hs
test/Language/Schminke/Backend/: ANFSpec.hs  ConvertSpec.hs  DeBruijnSpec.hs  EvalSpec.hs  NormalizeSpec.hs
test/Language/Schminke/Frontend/: InferSpec.hs  ParserSpec.hs
