name:                schminke
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jjingram/schminke#readme
license:             BSD3
license-file:        LICENSE
author:              Jarrod Jeffrey Ingram
maintainer:          jarrod.jeffi@gmail.com
copyright:           Copyright Jarrod Jeffrey Ingram (c) 2017
category:            Language, Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Schminke
                     , Language.Schminke.Frontend
                     , Language.Schminke.Frontend.Syntax
                     , Language.Schminke.Frontend.Parser
                     , Language.Schminke.Frontend.Type
                     , Language.Schminke.Frontend.Env
                     , Language.Schminke.Frontend.Infer
                     , Language.Schminke.Frontend.Pretty
  other-modules:       Language.Schminke.Frontend.Lexer
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , containers
                     , megaparsec
                     , pretty
                     , llvm-hs
                     , llvm-hs-pure
  default-language:    Haskell2010

executable schminke-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , schminke
                     , text
                     , containers
                     , mtl
                     , repline
                     , megaparsec
  default-language:    Haskell2010

test-suite schminke-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Language.Schminke.Frontend.ParserSpec
  build-depends:       base
                     , schminke
                     , hspec
                     , text
                     , megaparsec
                     , hspec-megaparsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jjingram/schminke
