name:                schminke
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jjingram/schminke#readme
license:             BSD3
license-file:        LICENSE
author:              Jarrod Jeffrey Ingram
maintainer:          jarrod.jeffi@gmail.com
copyright:           Copyright Jarrod Jeffrey Ingram (c) 2017
category:            Language, Compiler
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Schminke
                     , Language.Schminke.Syntax
                     , Language.Schminke.Parser
                     , Language.Schminke.Type
                     , Language.Schminke.Env
                     , Language.Schminke.Infer
                     , Language.Schminke.Pretty
                     , Language.Schminke.Codegen
                     , Language.Schminke.Emit
  other-modules:       Language.Schminke.Lexer
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , text
                     , containers
                     , megaparsec
                     , pretty
                     , llvm-hs
                     , llvm-hs-pure
  default-language:    Haskell2010

executable schminke
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , schminke
                     , text
                     , containers
                     , mtl
                     , repline
                     , megaparsec
                     , llvm-hs
                     , filepath
                     , directory
  default-language:    Haskell2010

test-suite schminke-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Language.Schminke.ParserSpec
                     , Language.Schminke.InferSpec
  build-depends:       base
                     , schminke
                     , containers
                     , hspec
                     , text
                     , megaparsec
                     , hspec-megaparsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jjingram/schminke
